--- a/src/pages/home/HomePage.module.css
+++ b/src/pages/home/HomePage.module.css
@@ -138,6 +138,7 @@
   border-bottom: 1px solid white;
   width: min-content;
   padding-bottom: 2px;
+  margin-top: 0;
 }
 
 .aboutParagraph {
@@ -165,4 +166,90 @@
 
 .aboutPersonalInfo span {
   font-weight: bold;
+}
+
+.skills {
+  height: 100vh;
+  width: auto;
+  margin-left: 300px;
+  color: white;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.skillsContainer {
+  margin-left: 150px;
+  margin-right: 150px;
+}
+
+.skillsContainerHeader {
+  padding-bottom: 30px;
+}
+
+.skillsContainerHeader h1 {
+  margin-top: 0;
+  border-bottom: 1px solid white;
+  padding-bottom: 2px;
+  width: max-content;
+}
+
+.skillsContainerContent {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.skillsContent {
+  flex: 0 0 auto;
+  width: 50%;
+  max-width: 100%;
+}
+
+.skillProgress {
+  display: block;
+  background: none;
+  border-radius: 0;
+  font-size: 0.75rem;
+  padding-right: 20px;
+  overflow: auto;
+  height: 75%;
+}
+
+.skillProgress::-webkit-scrollbar {
+  width: 0!important;
+}
+
+.skillName {
+  padding: 0;
+  margin: 0 0 6px 0;
+  text-transform: uppercase;
+  display: block;
+  font-weight: 600;
+  color: white;
+}
+
+.skillNameValue {
+  float: right;
+  font-style: normal;
+}
+
+.skillProgressBarContainer {
+  background: black;
+  height: 10px;
+}
+
+.skillProgressBar {
+  height: 10px;
+  transition: 0.9s;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  color: white;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.skillsProgressMap {
+  margin-bottom: 20px;
 }
