--- a/src/pages/home/HomePage.module.css
+++ b/src/pages/home/HomePage.module.css
@@ -1,3 +1,4 @@
+/* Header */
 .header {
   position: fixed;
   top: 0;
@@ -94,6 +95,7 @@
   filter: grayscale(90%);
 }
 
+/* HeRro */
 .hero {
   width: auto;
   height: 100vh;
@@ -115,6 +117,7 @@
   line-height: 56px;
 }
 
+/* About */
 .about {
   height: 100vh;
   width: auto;
@@ -168,6 +171,7 @@
   font-weight: bold;
 }
 
+/* Skills */
 .skills {
   height: 100vh;
   width: auto;
@@ -252,4 +256,30 @@
 
 .skillsProgressMap {
   margin-bottom: 20px;
+}
+
+/* Education */
+.education {
+  height: 100vh;
+  width: auto;
+  margin-left: 300px;
+  color: white;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.educationContainer {
+  margin-left: 150px;
+  margin-right: 150px;
+}
+
+.educationContainerTitle {
+  padding-bottom: 30px;
+}
+
+.educationContainerTitle h1 {
+  margin-top: 0;
+  border-bottom: 1px solid white;
+  padding-bottom: 2px;
+  width: max-content;
 }
