--- a/src/pages/home/HomePage.module.css
+++ b/src/pages/home/HomePage.module.css
@@ -1,285 +1,26 @@
-/* Header */
-.header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 300px;
-  z-index: 9997;
-  transition: all 0.5s;
-  padding: 0 15px;
-  background: black;
-  overflow-y: auto;
-  border-right: 1px solid white;
-  height: 100vh;
-}
-
-.profile {
-  display: block;
-  text-align: center;
-}
-
-.profileImageContainer {
-  margin: 15px auto;
-  display: block;
-  width: 120px;
-  height: 120px;
-  border: 8px solid #2c2f3f;
-  border-radius: 50% !important;
-}
-
-.profileImage {
-  border-radius: 50% !important;
-}
-
-.profileName {
-  margin: 0;
-  padding: 0;
-  font-weight: 700;
-  text-align-last: center;
+.containerOne {
   color: white;
-  text-decoration: none;
-}
-
-.socialLinksContainer {
-  text-align: center;
-  margin-top: 1rem !important;
-  filter: grayscale(90%);
-}
-
-.socialLinks {
-  margin: 5px;
-}
-
-.navbar {
-  padding: 30px 0 0 0;
+  height: 100vh;
   position: relative;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
 }
 
-.navbarUl {
-  margin-top: 0;
-  margin-bottom: 8px;
-  padding-left: 0;
-  list-style: none;
-  display: block;
-}
-
-.navbarLi {
-  color: white;
-  position: relative;
-  white-space: nowrap;
+.containerTwo {
+  width: 100%;
   margin: 0;
-  padding: 0;
-  list-style: none;
-  display: list-item;
-  display: flex;
-  justify-items: center;
-  text-align: -webkit-match-parent;
-}
-
-.navbarAnchor {
-  display: flex;
-  align-items: center;
-  padding-right: 15px;
-  padding-left: 15px;
-  padding-top: 12px;
-  padding-bottom: 12px;
-}
-
-.navbarImage {
-  display: flex;
-  align-items: center;
-  margin-right: 12px;
-  filter: grayscale(90%);
-}
-
-/* HeRro */
-.hero {
-  width: auto;
-  height: 100vh;
-  background-size: cover;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 60px 0;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  margin-left: 300px;
-}
-
-.heroHeader {
-  color: white;
-  font-size: 50px;
-  font-weight: 900;
-  line-height: 56px;
-}
-
-/* About */
-.about {
-  height: 100vh;
-  width: auto;
-  margin-left: 300px;
-  color: white;
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-
-.aboutContainer {
-  margin-left: 150px;
-  margin-right: 150px;
-}
-
-.aboutTitle {
-  padding-bottom: 30px;
-}
-
-.aboutHeader {
-  color: white;
-  border-bottom: 1px solid white;
-  width: min-content;
-  padding-bottom: 2px;
-  margin-top: 0;
-}
-
-.aboutParagraph {
-  line-height: 1.6;
-}
-
-.aboutPersonalContainer {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.aboutPersonalImage {
-  width: 40%;
-  height: 40%;
-  filter: grayscale(90%);
-  margin-right: 20px;
-}
-
-.aboutPersonalHeader {
-  margin-top: 0;
-  border-bottom: 1px solid white;
-  padding-bottom: 2px;
-  width: max-content;
-}
-
-.aboutPersonalInfo span {
-  font-weight: bold;
-}
-
-/* Skills */
-.skills {
-  height: 100vh;
-  width: auto;
-  margin-left: 300px;
-  color: white;
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-
-.skillsContainer {
-  margin-left: 150px;
-  margin-right: 150px;
-}
-
-.skillsContainerHeader {
-  padding-bottom: 30px;
-}
-
-.skillsContainerHeader h1 {
-  margin-top: 0;
-  border-bottom: 1px solid white;
-  padding-bottom: 2px;
-  width: max-content;
-}
-
-.skillsContainerContent {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.skillsContent {
-  flex: 0 0 auto;
-  width: 50%;
-  max-width: 100%;
-}
-
-.skillProgress {
-  display: block;
-  background: none;
-  border-radius: 0;
-  font-size: 0.75rem;
-  padding-right: 20px;
-  overflow: auto;
-  height: 70%;
-}
-
-.skillProgress::-webkit-scrollbar {
-  width: 0 !important;
-}
-
-.skillName {
-  padding: 0;
-  margin: 0 0 6px 0;
-  text-transform: uppercase;
-  display: block;
-  font-weight: 600;
-  color: white;
-}
-
-.skillNameValue {
-  float: right;
-  font-style: normal;
-}
-
-.skillProgressBarContainer {
-  background: black;
-  height: 10px;
-}
-
-.skillProgressBar {
-  height: 10px;
-  transition: 0.9s;
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  overflow: hidden;
-  color: white;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
   text-align: center;
-  white-space: nowrap;
 }
 
-.skillsProgressMap {
-  margin-bottom: 20px;
+.containerThree ul {
+  padding: 0;
+  text-align: center;
+  display: inline-flex;
+  list-style-type: none;
 }
 
-/* Education */
-.education {
-  height: 100vh;
-  width: auto;
-  margin-left: 300px;
-  color: white;
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-
-.educationContainer {
-  margin-left: 150px;
-  margin-right: 150px;
-}
-
-.educationContainerTitle {
-  padding-bottom: 30px;
-}
-
-.educationContainerTitle h1 {
-  margin-top: 0;
-  border-bottom: 1px solid white;
-  padding-bottom: 2px;
-  width: max-content;
+.containerThree li {
+  padding: 5px;
 }
