--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,3 +12,9 @@
   background-color: black;
   color: white;
 }
+
+@media only screen and (max-width: 640px) {
+  #footer {
+    width: 100%;
+  }
+}
